...
    }
}

#Preview {
    CharacterMapView(character: Character(
        id: 1,
        name: "Rick Sanchez",
        status: .alive,
        species: "Human",
        type: "",
        gender: "Male",
        image: "https://rickandmortyapi.com/api/character/avatar/1.jpeg",
        url: "https://rickandmortyapi.com/api/character/1",
...
