...
                    case .success(let characters):
                        listView(characters: characters)
                    }
                }
            }
            .navigationTitle("Personajes")
            .searchable(text: $viewModel.searchQuery, prompt: "Buscar personaje...")
            .refreshable {
                await viewModel.refresh()
            }
            .navigationDestination(for: Character.self) { character in
                CharacterDetailView(viewModel: detailViewModelFactory(character))
            }
...
